--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ h1, h2, h3, h4, h5, h6, figure {
 
 .gtco-container {
   max-width: 1140px;
-  position: relative;
+  position: center;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
